# shika-s.github.io

./: .gitignore  README.md  _config.yml  index.html
bird_sound_classification/: .gitignore  README.md  pyproject.toml
bird_sound_classification/.streamlit/: secrets.toml
bird_sound_classification/notebooks/notebooks_denvir/: cnn.ipynb  create_preprocessed_data.ipynb  model_testing.ipynb  preprocessed_EDA.ipynb  train_test_val.ipynb
bird_sound_classification/notebooks/notebooks_denvir/streamlit/: app.py  class_labels.json  requirements.txt
bird_sound_classification/notebooks/notebooks_dl/: 02a_keras_train_baseline_32.ipynb  model_testing_plan_dl.md
bird_sound_classification/notebooks/notebooks_dl/bak/: 02a_keras_train_baseline_256_aug_os.ipynb  02a_keras_train_baseline_32.ipynb  02a_keras_train_baseline_32_aug.ipynb  02a_keras_train_baseline_32_aug_os.ipynb  02a_keras_train_baseline_32_cw.ipynb  02a_keras_train_baseline_32_os.ipynb  02a_keras_train_baseline_64_aug_os.ipynb  02a_keras_train_baseline_64_os.ipynb  02b_keras_train_baseline_32_tl.ipynb  02b_keras_train_baseline_32_tl_aug_os.ipynb  02b_keras_train_baseline_32_tl_os.ipynb  03_rescnn_training_trials.ipynb  03_rescnn_training_trials_aug.ipynb  03_rescnn_training_trials_aug_tl.ipynb  03_rescnn_training_trials_tl.ipynb  train_val_test_assignment.ipynb
bird_sound_classification/notebooks/notebooks_dl/baseline/: efficientnet-b0-pytorch-inference.ipynb  efficientnet-b0-pytorch-train.ipynb
bird_sound_classification/notebooks/notebooks_dl/eda/: raw_data_EDA_no_map.ipynb
bird_sound_classification/notebooks/notebooks_ss/: birdclef_raw_data_load.py  ml_model_cnn_prev.ipynb  ml_model_cnn_prev0.ipynb  ml_model_cnn_prev1.ipynb  ml_model_cnn_species.ipynb  processed_EDA.ipynb
bird_sound_classification/notebooks/notebooks_wk/: Flat_NN_new.ipynb  raw_data_EDA.ipynb
bird_sound_classification/notes/: comp_task_explained.md  how_the_core_goals_would_help.md  unlabeled_data.md
caching-and-kubernetes/lab3/: Dockerfile  README.md  pyproject.toml
caching-and-kubernetes/lab3/infra/: deployment-pythonapi.yaml  deployment-redis.yaml  namespace.yaml  service-prediction.yaml  service-redis.yaml
caching-and-kubernetes/lab3/src/: housing_predict.py  main.py
caching-and-kubernetes/lab3/tests/: test_src.py
caching-and-kubernetes/lab3/trainer/: predict.py
end_to_end_machine_learning_api/mlapi/: Dockerfile  example.py  pyproject.toml  submission-namespace.yaml
end_to_end_machine_learning_api/mlapi/src/: sentiment_predict.py
end_to_end_machine_learning_api/mlapi/tests/: test_mlapi.py
end_to_end_machine_learning_api/mlapi/trainer/: predict.py  train.py
(+266 files in other folders)
