[project]
name            = "datasci207-bird-sounds"
version         = "0.1.0"
requires-python = "==3.10.2"
authors         = [{ name = "David Lin" }]

dependencies = [
    "numpy>=1.26.4",
    "tensorflow[and-cuda]>=2.19.0",
    "opencv-python>=4.11.0.86",
    "librosa>=0.11.0",
    "keras-tuner>=1.4.7",
    "colorama>=0.4.6",
    "cycler>=0.12.1",
    "graphviz>=0.21",
    "ipykernel>=6.30.0",
    "ipython>=8.37.0",
    "kaggle>=1.7.4.5",
    "matplotlib>=3.10.3",
    "nbconvert>=7.16.6",
    "nbformat>=5.10.4",
    "pandas>=2.3.1",
    "pyarrow>=21.0.0",
    "pydot>=4.0.1",
    "scikit-learn>=1.7.1",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "tensorflow-addons>=0.23.0",
    "imbalanced-learn>=0.12.4",
    "keras>=3.10.0",
    "keras-cv>=0.9.0",
    "keras-hub>=0.21.1",
    "huggingface-hub>=0.34.3",
    "tensorflow-hub>=0.16.1",
    "protobuf==3.20.3",
]
