[project]
name = "src"
version = "0.1.0"
description = ""
authors = [
    {name = "shikha",email = "shikhasharma@berkeley.edu"}
]
readme = "README.md"
requires-python = ">=3.13,<4"
dependencies = [
    "fastapi[standard] (>=0.128.0,<0.129.0)",
    "scikit-learn (==1.8.0)",
    "fastapi-simple-redis-cache (>=2.0.0,<3.0.0)",
    "pandas (>=3.0.1,<4.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "ruff (>=0.14.11,<0.15.0)"

]
